feat: adding pagination, sorting and filtering to list of orders
