# controllers/documentation/swagger.json
@@ -10,17 +10,49 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
-    "/orders": {
+    "/orders?limit=10&offset=0": {
+      "parameters": [
+        {
+          "name": "limit",
+          "in": "query",
+          "description": "liczba pobranych zamówień",
+          "type": "integer",
+          "default": "10"
+        },
+        {
+          "name": "offset",
+          "in": "query",
+          "description": "strona pobieranych zamówień",
+          "type": "integer",
+          "default": "0"
+        }
+      ],
       "get": {
         "tags": ["Orders"],
         "description": "Pobieranie wszystkich zamówień publicznych",
         "summary": "getOrders",
+        "parameters": [
+          {
+            "name": "ordersOption",
+            "in": "body",
+            "description": "Opcje sortowania oraz filtrowania danych zamówień publicznych",
+            "schema": {
+              "$ref": "#/definitions/orderPaginationRequestBody"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
               "$ref": "#/definitions/orderList"
             }
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/orderValidationError"
+            },
+            "description": "Blad walidacji - zostanie zwrocona tablica bledow"
           },
           "500": {
             "schema": {
@@ -29,7 +61,9 @@
             "description": "Pobieranie danych nie powiodło się"
           }
         }
-      },
+      }
+    },
+    "/orders": {
       "post": {
         "tags": ["Orders"],
         "description": "Dodwanie nowego zamówienia publicznego",
@@ -1029,46 +1063,55 @@
       }
     },
     "orderList": {
-      "type": "array",
-      "items": {
-        "properties": {
-          "_id": {
-            "uniqueItems": true,
-            "example": "62af396caa850b80e1eb3e78",
-            "type": "string"
-          },
-          "procedureIdentifier": {
-            "example": "ZP/2311/24/901/2022",
-            "type": "string"
-          },
-          "category": {
-            "example": "Sprzet",
-            "type": "string"
-          },
-          "mode": {
-            "example": "rozeznanie cenowe",
-            "type": "string"
-          },
-          "title": {
-            "example": "fajna nazwa",
-            "type": "string"
-          },
-          "price": {
-            "example": 30001,
-            "type": "number"
-          },
-          "dateOfPublication": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "expirationDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "ownerId": {
-            "type": "string",
-            "example": "62c9badc3e05ba06a7d5a65b"
+      "type": "object",
+      "properties": {
+        "orders": {
+          "type": "array",
+          "items": {
+            "properties": {
+              "_id": {
+                "uniqueItems": true,
+                "example": "62af396caa850b80e1eb3e78",
+                "type": "string"
+              },
+              "procedureIdentifier": {
+                "example": "ZP/2311/24/901/2022",
+                "type": "string"
+              },
+              "category": {
+                "example": "Sprzet",
+                "type": "string"
+              },
+              "mode": {
+                "example": "rozeznanie cenowe",
+                "type": "string"
+              },
+              "title": {
+                "example": "fajna nazwa",
+                "type": "string"
+              },
+              "price": {
+                "example": 30001,
+                "type": "number"
+              },
+              "dateOfPublication": {
+                "type": "string",
+                "format": "date-time"
+              },
+              "expirationDate": {
+                "type": "string",
+                "format": "date-time"
+              },
+              "ownerId": {
+                "type": "string",
+                "example": "62c9badc3e05ba06a7d5a65b"
+              }
+            }
           }
+        },
+        "count": {
+          "type": "integer",
+          "example": 8
         }
       }
     },
@@ -1138,6 +1181,22 @@
         "expirationDate": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "orderPaginationRequestBody": {
+      "properties": {
+        "sortOption": {
+          "example": { "_id" :  1},
+          "type": "object",
+          "default": null,
+          "enum": [{"_id" : 1}, {"title" : -1}]
+        },
+        "filterOption": {
+          "example": { "title": "druk", "mode": "rozeznanie cenowe", "category": "Usługi"},
+          "type": "object",
+          "default": null,
+          "enum": [{"title": "", "mode": "", "category": ""}]
         }
       }
     }
